--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@ We are the Tour Guides. ​
 We&#39;re going to go to 3 places ​
 But first let&#39;s get to know you
 &lt;/div&gt;
+&lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-6&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 
 
@@ -579,7 +580,7 @@ But first let&#39;s get to know you
     Form up Tour Guides!
     &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
-&lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-6&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="KT-6" tags="" position="300,725" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
+</tw-passagedata><tw-passagedata pid="7" name="KT-6" tags="" position="300,725" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
 
 &lt;main&gt;
 TEAMS PREPARE
@@ -591,15 +592,19 @@ What is your favourite colour?​
 What is your favourite game?​
 
 How do you feel about going to Year 1?​
+
+&lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-7&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 
-&lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-7&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="8" name="KT-7" tags="" position="300,850" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
+</tw-passagedata><tw-passagedata pid="8" name="KT-7" tags="" position="300,850" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
 
 &lt;main&gt;
 GET READY TO GO ON TOUR​
+
+&lt;&lt;button &quot;WHEN THE TOUR IS COMPLETE CLICK HERE&quot;&gt;&gt;&lt;&lt;goto &quot;KT-8&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 
-&lt;&lt;button &quot;WHEN THE TOUR IS COMPLETE CLICK HERE&quot;&gt;&gt;&lt;&lt;goto &quot;KT-8&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="KT-8" tags="" position="300,975" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour5&quot; play&gt;&gt;
+</tw-passagedata><tw-passagedata pid="9" name="KT-8" tags="" position="300,975" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour5&quot; play&gt;&gt;
 
 &lt;main&gt;
 THIS IS THE END OF OUR TOUR TOGETHER RECEPTION​
