--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="The Kindness Tour" startnode="1" creator="Twine" creator-version="2.5.1" format="SugarCube" format-version="2.36.1" ifid="9B9591F1-BD8E-4836-9534-14A0DD3CBAB0" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap");
+	<tw-storydata name="The Kindness Tour" startnode="1" creator="Twine" creator-version="2.5.1" format="SugarCube" format-version="2.36.1" ifid="9B9591F1-BD8E-4836-9534-14A0DD3CBAB0" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
 
 /* GENERICS */
 html {
@@ -272,186 +272,53 @@ a:hover {
 
 /* GENERAL STYLES */
 body{
-  font-size: 1.8rem;
+  font-size: 5rem;
   font-weight: 600;
-  font-family: "Space Grotesk";
+  font-family: 'Pangolin', cursive;
+  
   color:#fff;
   /* color:#000; */
   overflow:scroll;
-  background:#188081;
+  background:#507ac4;
   /* padding: 1.5rem */
   display:flex;
   flex-direction: column
 }
 
-header{
-  display:flex;
-  justify-content: flex-end;
-  align-items: center;
-    padding: 2rem
-}
 main{
    padding: 2rem;
-   margin-block-end: 10rem
+   margin-block-end: 10rem;
+   text-align: center;
 }
 
-input[type=text]{
-  border: 1px solid #fff
-}
-/* FOOTER  */
-
-footer{
-   display:flex;
-  justify-content: space-between;
-align-items: end;
-  position:fixed;
-  bottom: 0;
-  padding: 2rem;
-  width: 100%;
-background: #188081;
+h1{
+font-size: 6rem;
+  font-weight:bold;
+    text-decoration: underline;
 }
 
-nav{
+.flex-center-container{
   display:flex;
-    justify-content: space-between;
-}
-
-.nav-wrapper{
-display:flex;
+  justify-content:center;
+  align-items:center;
   flex-direction:column;
-align-items: flex-start
 }
-
-.nav-wrapper:last-child{
-align-items: flex-end
-}
-
-.nav-item{
-  margin-block-end: 0.5rem;
-  width:100%;
-  display:flex
-}
-
-.nav-item.replay, .nav-item.end{
-justify-content: center
-}
-.nav-item.replay, .nav-item.forward{
-justify-content: end
-}
-
-.nav-item.replay, .nav-item.back{
-justify-content: start
-}
-
-.nav-item.forward > button, 
-.nav-item.back > button{
-  font-size:2rem
-}
-footer > button:first-child,  {
-  font-size:2rem
-}
-
-.nav-item > button{
- font-size: 1.3rem
-}
-
-.menu-wrapper{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.menu-wrapper > button{
-margin-inline-end: 10px;
-margin-block-end: 10px
-}
-
-
-textarea{
-  min-width: 60vw
-}
-
-.wordcontainer{
+.flex-rows-align{
   display:flex;
-  flex-direction: row;
+  justify-content:center;
+  align-items:center;
 }
 
-.letter-item > input[type=text]{
-    min-width: 2em;
-  	max-width: 2em;
-  	margin-inline-end:10px;
-}
-
-.letter-item > .correct-letter{
-  min-width: 2em;
-  	max-width: 2em;
-  	margin-inline-end:10px;
+.spaced{
+word-spacing: 1rem;
 }
 
 
 
 
-@keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
-}
 
 
-/* MAP */
-	.map{
-width: 100%;
-    height: 60vh;
-    border: 0;
-    margin: auto;
-    }
-
-
-.directions-card {
-    display: none!important
-}
-
-@media screen and (min-width: 450px) {
-.map{
-	max-width:60vw;
-	height:50vh;
-	border:0
-}
-}
-
-/* SPECIFICS */
-
-.dropdown-wrapper{
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: space-between;
-}
-
-.wrong {
-  color:#f6cbc0;
-}
-
-.question{
-  border: 1px solid #fff;
-    padding: 10px;
-}
-
-input[type=text], select{
-  border: 1px solid #fff
-}
-
-input[type=text]{
-  min-width: 60%
-}
-
-h2.title{
-  font-size:2.5rem
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript">$('#ui-bar').remove();
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">$('#ui-bar').remove();
 $(document.head).find('#style-ui-bar').remove();
 // TYPEWRITER FN
 !function() {
@@ -512,113 +379,83 @@ $(document.head).find('#style-ui-bar').remove();
             }
         ,t);
     };
-}();</script><tw-passagedata pid="1" name="KT-1" tags="" position="300,100" size="100,100">&lt;main&gt;
+}();</script><tw-passagedata pid="1" name="KT-1" tags="" position="300,100" size="100,100">&lt;main class=&quot;flex-center-container&quot;&gt;
 
-THE KINDNESS TOUR
+&lt;h1&gt;THE KINDNESS TOUR&lt;/h1&gt;
 
 &lt;&lt;button &quot;&gt;&quot;&gt;&gt;
   &lt;&lt;goto &quot;KT-2&quot;&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 
 &lt;/main&gt;
-</tw-passagedata><tw-passagedata pid="2" name="KT-2" tags="" position="300,225" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour1&quot; play&gt;&gt;
-&lt;main&gt;
-
-
-Hello reception. ​
-We are Year 5​
-We are excited for you to go into Year 1 next year. ​
-Next year we&#39;ll be Year 6. ​
-The big kids​
-The old ones.​
+</tw-passagedata><tw-passagedata pid="2" name="KT-2" tags="" position="300,225" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour1&quot; play&gt;&gt;&lt;main class=&quot;flex-center-container&quot;&gt;Hello reception. 
+We are Year 5
+We are excited for you to go into Year 1 next year. 
+Next year we&#39;ll be Year 6. 
+The big kids
+The old ones
 The experienced ones
-
 &lt;&lt;timed 19s&gt;&gt;&lt;&lt;goto &quot;KT-3&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
 
-&lt;/main&gt;</tw-passagedata><tw-passagedata pid="3" name="KT-3" tags="" position="300,350" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour2&quot; play&gt;&gt;
-
-&lt;main&gt;
-We remember what it was like to go into Year 1​
-It can feel different​
-You don&#39;t need to be scared​
-This school is a team. ​
+&lt;/main&gt;</tw-passagedata><tw-passagedata pid="3" name="KT-3" tags="" position="300,350" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour2&quot; play&gt;&gt;&lt;main class=&quot;flex-center-container&quot;&gt;
+We remember what it was like to go into Year 1
+It can feel different
+You don&#39;t need to be scared
+This school is a team. 
 And we want to help you feel excited. 
 &lt;/main&gt;
 
-&lt;&lt;timed 12s&gt;&gt;&lt;&lt;goto &quot;KT-4&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryInit" tags="" position="0,100" size="100,100">&lt;&lt;cacheaudio &quot;Tour1&quot; &quot;https://www.dropbox.com/s/cfmhuk9iyxrz22v/Tour1.mp3?dl=1&quot;&gt;&gt;
-&lt;&lt;cacheaudio &quot;Tour2&quot; &quot;https://www.dropbox.com/s/9job0h16t5mziuc/Tour2.mp3?dl=1&quot;&gt;&gt;
+&lt;&lt;timed 12s&gt;&gt;&lt;&lt;goto &quot;KT-4&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryInit" tags="" position="100,100" size="100,100">&lt;&lt;cacheaudio &quot;Tour1&quot; &quot;https://www.youhavefoundconey.net/gtg/Tour/Tour1.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;Tour2&quot; &quot;https://www.youhavefoundconey.net/gtg/Tour/Tour2.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;Tour3&quot; &quot;https://www.youhavefoundconey.net/gtg/Tour/Tour3.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;Tour4&quot; &quot;https://www.youhavefoundconey.net/gtg/Tour/Tour4.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;Tour5&quot; &quot;https://www.youhavefoundconey.net/gtg/Tour/Tour5.mp3&quot;&gt;&gt;
 
-&lt;&lt;cacheaudio &quot;Tour3&quot; &quot;https://www.dropbox.com/s/pdzzka56kzpvbx4/Tour3.mp3?dl=1&quot;&gt;&gt;
-&lt;&lt;cacheaudio &quot;Tour4&quot; &quot;https://www.dropbox.com/s/nkgymcan3jenua1/Tour4.mp3?dl=1&quot;&gt;&gt;
-&lt;&lt;cacheaudio &quot;Tour5&quot; &quot;https://www.dropbox.com/s/bqtraps7ghi59j4/Tour5.mp3?dl=1&quot;&gt;&gt;
 
+&lt;&lt;waitforaudio&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="KT-4" tags="" position="300,475" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour3&quot; play&gt;&gt;&lt;main class=&quot;flex-center-container&quot;&gt;
+So, we have made a tour for you. 
+A kindness tour. 
+Hosted by us
+For you
+We are the Tour Guides. 
 
-&lt;&lt;waitforaudio&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="KT-4" tags="" position="300,475" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour3&quot; play&gt;&gt;
-
-&lt;main&gt;
-So, we have made a tour for you. ​
-A kindness tour. ​
-Hosted by us​
-For you​
-We are the Tour Guides. ​
-​
 &lt;/main&gt;
 
-&lt;&lt;timed 11s&gt;&gt;&lt;&lt;goto &quot;KT-5&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="6" name="KT-5" tags="" position="300,600" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour4&quot; play&gt;&gt;
-
-&lt;main&gt;
-&lt;div class=&quot;textholder&quot;&gt;
-We&#39;re going to go to 3 places ​
+&lt;&lt;timed 11s&gt;&gt;&lt;&lt;goto &quot;KT-5&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="6" name="KT-5" tags="" position="300,600" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour4&quot; play&gt;&gt;&lt;main class=&quot;textholder flex-center-container&quot;&gt;
+We&#39;re going to go to 3 places
 But first let&#39;s get to know you
-&lt;/div&gt;
-&lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-6&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
-
 
 &lt;&lt;timed 5s&gt;&gt;
 	&lt;&lt;replace &quot;.textholder&quot;&gt;&gt;
     Form up Tour Guides!
+    
+    &lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-6&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+    
     &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
 </tw-passagedata><tw-passagedata pid="7" name="KT-6" tags="" position="300,725" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
-
-&lt;main&gt;
-TEAMS PREPARE
-​
-What is your name?​
-
-What is your favourite colour?​
-
-What is your favourite game?​
-
-How do you feel about going to Year 1?​
+&lt;main&gt;&lt;h1&gt;TEAMS PREPARE&lt;/h1&gt;What is your name?
+What is your favourite colour?
+What is your favourite game?
+How do you feel about going to Year 1?
 
 &lt;&lt;button &quot;&gt;&quot;&gt;&gt;&lt;&lt;goto &quot;KT-7&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 
-</tw-passagedata><tw-passagedata pid="8" name="KT-7" tags="" position="300,850" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;
-
-&lt;main&gt;
-GET READY TO GO ON TOUR​
+</tw-passagedata><tw-passagedata pid="8" name="KT-7" tags="" position="300,850" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;main class=&quot;flex-center-container&quot;&gt;
+&lt;h1&gt;GET READY TO GO ON TOUR&lt;/h1&gt;
 
 &lt;&lt;button &quot;WHEN THE TOUR IS COMPLETE CLICK HERE&quot;&gt;&gt;&lt;&lt;goto &quot;KT-8&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/main&gt;
 
-</tw-passagedata><tw-passagedata pid="9" name="KT-8" tags="" position="300,975" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour5&quot; play&gt;&gt;
-
-&lt;main&gt;
-THIS IS THE END OF OUR TOUR TOGETHER RECEPTION​
-
-BUT IT ISN’T GOODBYE​
-
-BECAUSE WE’LL SEE YOU NEXT YEAR​
-
-WHEN YOU’LL BE IN YEAR 1 AND WE’LL BE IN YEAR 6​
-
-WE HOPE YOU ENJOYED THE TOUR​
-
-REMEMBER YOU CAN ALWAYS SAY HELLO.​
-
+</tw-passagedata><tw-passagedata pid="9" name="KT-8" tags="" position="300,975" size="100,100">&lt;&lt;audio &quot;:all&quot; stop&gt;&gt;&lt;&lt;audio &quot;Tour5&quot; play&gt;&gt;&lt;main class=&quot;flex-center-container spaced&quot;&gt;
+THIS IS THE END OF OUR TOUR TOGETHER RECEPTION
+BUT IT ISN’T GOODBYE
+BECAUSE WE’LL SEE YOU NEXT YEAR
+WHEN YOU’LL BE IN YEAR 1 AND WE’LL BE IN YEAR 6
+WE HOPE YOU ENJOYED THE TOUR
+REMEMBER YOU CAN ALWAYS SAY HELLO.
 UNTIL NEXT TIME
 &lt;/main&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
